--- a/force-app/main/default/lwc/getPicklistValuesDemo/getPicklistValuesDemo.html
+++ b/force-app/main/default/lwc/getPicklistValuesDemo/getPicklistValuesDemo.html
@@ -1,3 +1,35 @@
 <template>
-    <lightning-card title="Get Picklist Values form getObjectInfo"></lightning-card>
+    <lightning-card title="Get Picklist Values form getObjectInfo">
+        <template lwc:if={industryPiclist.data}>
+            <lightning-combobox name="progress" label="Status of Industry" value={value} placeholder="Select Industry"
+                options={industryPiclist.data.values} onchange={handleChange}></lightning-combobox>
+
+
+            <p>Industry Selected value is: {value}</p>
+        </template>
+    </lightning-card>
+
+
+    <!-- ////////////////////////////////////////////////////////////////////////////////////////////////// -->
+
+    <lightning-card title="GetPicklistValuesByRecordType form getObjectInfo">
+        <template lwc:if={accountInfoFunction.data}>
+            <lightning-combobox name="progress" label="Rating" value={value} placeholder="Select Rating"
+                options={accountInfoFunction.data.picklistFieldValues.Rating.values}
+                onchange={handleChange}></lightning-combobox>
+
+
+            <p>Rating Selected value is: {value}</p>
+
+            <lightning-combobox name="progress" label="Priority" value={value} placeholder="Select Priority"
+                options={accountInfoFunction.data.picklistFieldValues.CustomerPriority__c.values}
+                onchange={handleChange}></lightning-combobox>
+
+
+            <p>Priority Selected value is: {value}</p>
+        </template>
+    </lightning-card>
+
+
+
 </template>
